restructured the pages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,2 @@
-<div class="page-container page-one" #firstPage id="first-page">
-  <div class="top-watermark"></div>
-    <top-header></top-header>
-    <div class="row">
-      <page-one></page-one>
-    </div>
-  <div class="bottom-watermark"></div>
-</div>
-
-<div style="height: 20px"></div>
-
-<div class="page-container page-two" #secondPage id="second-page" style="padding-top: 33px;">
-  <div class="top-watermark"></div>
-    <page-two></page-two>
-  <div class="bottom-watermark"></div>
-</div>
-
-<div class="col-md-12" style="text-align: center;">
-  <a class="btn btn-success" href="https://www.sejda.com/html-to-pdf?save-link" target="_blank">Save to PDF</a>
-  <button class="btn btn-primary" (click)="print()">Print</button>
-</div>
+<!-- <show-page></show-page> -->
+<print-page></print-page>
