latest buile 100620200327pm

--- a/src/app/print-page/print-page.component.html
+++ b/src/app/print-page/print-page.component.html
@@ -8,5 +8,6 @@
 </div>
 
 <div class="col-md-12" style="text-align: center;">
-    <a class="btn btn-success" href="https://www.sejda.com/html-to-pdf?save-link" target="_blank">Save to PDF</a>
+    <a class="btn btn-success" href="https://www.sejda.com/html-to-pdf?save-link&viewportWidth=893" target="_blank">Save to PDF</a>
 </div>
+
