Added print function

--- a/src/app/Components/education/education.component.html
+++ b/src/app/Components/education/education.component.html
@@ -12,7 +12,7 @@
                 <span class="pull-right">{{education.cgpa}}</span>
             </div>
             <div class="col-md-12 no-col-padding" style="padding-top: 5px;">
-                <bracket-list [listItems]="education.subjects" [isTwoRow]="true"></bracket-list>
+                <span bracket-list [listItems]="education.subjects" [isTwoRow]="true"></span>
             </div>
         </div>
     </div>
