--- a/src/app/Components/page-one/page-one.component.html
+++ b/src/app/Components/page-one/page-one.component.html
@@ -1,7 +1,9 @@
-<div class="left-bar">
-    <contacts></contacts>
-    <skills></skills>
-</div>
-<div class="right-bar">
-    <work-experience></work-experience>
+<div class="row">
+    <div class="left-bar-unset col-md-3">
+        <div contacts></div>
+        <div skills></div>
+    </div>
+    <div class="right-bar-unser col-md-9" style="padding-left: 0px;">
+        <div work-experience></div>
+    </div>
 </div>
