--- a/src/app/print-page/print-page.component.html
+++ b/src/app/print-page/print-page.component.html
@@ -1,8 +1,8 @@
 <div class="page-container page-one print-page" #firstPage id="first-page">
     <div class="top-watermark"></div>
-    <top-header></top-header>
+    <div top-header></div>
     <div class="row">
-    <page-one></page-one>
+    <div page-one></div>
     </div>
     <div class="bottom-watermark"></div>
 </div>
