--- a/src/app/show-page/show-page.component.html
+++ b/src/app/show-page/show-page.component.html
@@ -1,8 +1,8 @@
   <div class="page-container page-one" #firstPage id="first-page">
     <div class="top-watermark"></div>
-      <top-header></top-header>
+      <div top-header></div>
       <div class="row">
-        <page-one></page-one>
+        <div page-one></div>
       </div>
     <div class="bottom-watermark"></div>
   </div>
@@ -19,4 +19,4 @@
     <a class="btn btn-success" href="https://www.sejda.com/html-to-pdf?save-link" target="_blank">Save to PDF</a>
     <button class="btn btn-primary" (click)="print()">Print</button>
   </div>
-  
+  <iframe name="print_frame" width="892.5px" height="0" frameborder="0" src="about:blank"></iframe>
