--- a/src/app/Components/contacts/contacts.component.html
+++ b/src/app/Components/contacts/contacts.component.html
@@ -1,24 +1,24 @@
-<div class="col-md-12" style="margin:3px 0px 20px 0px;">
+<div class="col-md-12" style="margin:3pt 0pt 20pt 0pt;">
     <div class="col-md-12">
         <div class="col-md-12 no-col-padding contact-item text-small">
-            <i class="fas fa-envelope text-primary-color text-normal" style="min-width: 15px;"></i>
-            <span class="text-small" style="margin-left:8px;">{{contactDetails.mailId}}</span>
+            <i class="fas fa-envelope text-primary-color text-normal" style="min-width: 15pt;"></i>
+            <span class="text-small" style="margin-left:8pt;">{{contactDetails.mailId}}</span>
         </div>
         <div class="col-md-12 no-col-padding contact-item text-small">
-            <i class="fas fa-mobile-alt text-primary-color text-normal" style="min-width: 15px;"></i>
-            <span class="text-small" style="margin-left:8px;">{{contactDetails.phoneNumber}}</span>
+            <i class="fas fa-mobile-alt text-primary-color text-normal" style="min-width: 15pt;"></i>
+            <span class="text-small" style="margin-left:8pt;">{{contactDetails.phoneNumber}}</span>
         </div>
         <div class="col-md-12 no-col-padding contact-item text-small">
-            <i class="fas fa-map-marker-alt text-primary-color text-normal" style="min-width: 15px;"></i>
-            <span class="text-small" style="margin-left:8px;">{{contactDetails.location}}</span>
+            <i class="fas fa-map-marker-alt text-primary-color text-normal" style="min-width: 15pt;"></i>
+            <span class="text-small" style="margin-left:8pt;">{{contactDetails.location}}</span>
         </div>
         <div class="col-md-12 no-col-padding contact-item text-small">
-            <i class="fab fa-linkedin-in text-primary-color text-normal" style="min-width: 15px;"></i>
-            <span class="text-small" style="margin-left:8px;">{{contactDetails.linkedin}}</span>
+            <i class="fab fa-linkedin-in text-primary-color text-normal" style="min-width: 15pt;"></i>
+            <span class="text-small" style="margin-left:8pt;">{{contactDetails.linkedin}}</span>
         </div>
         <div class="col-md-12 no-col-padding contact-item text-small">
-            <i class="fab fa-github text-primary-color text-normal" style="min-width: 15px;"></i>
-            <span class="text-small" style="margin-left:8px;">{{contactDetails.github}}</span>
+            <i class="fab fa-github text-primary-color text-normal" style="min-width: 15pt;"></i>
+            <span class="text-small" style="margin-left:8pt;">{{contactDetails.github}}</span>
         </div>
     </div>
 </div>
