--- a/src/app/Components/page-one/page-one.component.html
+++ b/src/app/Components/page-one/page-one.component.html
@@ -1,9 +1,17 @@
-<div class="row">
+<!-- <div class="row">
     <div class="left-bar-unset col-md-3">
         <div contacts></div>
         <div skills></div>
     </div>
-    <div class="right-bar-unser col-md-9" style="padding-left: 0px;">
+    <div class="right-bar-unser col-md-9" style="padding-left: 0pt;">
         <div work-experience></div>
     </div>
+</div> -->
+
+<div class="left-bar">
+    <div contacts></div>
+    <div skills></div>
+</div>
+<div class="right-bar">
+    <div work-experience></div>
 </div>
