--- a/src/app/Components/skills/skills.component.html
+++ b/src/app/Components/skills/skills.component.html
@@ -1,5 +1,5 @@
-<div class="col-md-12" style="margin:3px 0px 8px 0px;">
-    <div class="col-md-12">
+<div class="col-md-12 skills-parent" style="margin:3pt 0pt 8pt 0pt;">
+    <div class="col-md-12" style="padding-right:0px">
         <div class="col-md-12 no-col-padding text-title content-heading title-underline">SKILLS</div>
         <div class="col-md-12 no-col-padding">
             <div class="skill-block-container" *ngFor="let skill of skillsData.skills">
