--- a/src/app/Components/work-experience/work-experience.component.html
+++ b/src/app/Components/work-experience/work-experience.component.html
@@ -1,17 +1,17 @@
-<div class="col-md-12">
-    <div class="col-md-12 text-title content-heading title-underline">
+<div class="col-md-12" style="padding-left: 0px;">
+    <div class="col-md-12 text-title content-heading title-underline" style="padding-left: 0px;">
         Work Experience
     </div>
-    <div class="col-md-12" *ngFor="let workExp of workExps; index as i " style="padding-bottom:20px;">
+    <div class="col-md-12 work-experience-item" *ngFor="let workExp of workExps; index as i ">
         <div class="group-line text-white" [ngClass]="{'background-primary': (i+1) < this.workExps.length, 'background-white' : (i+1) >= this.workExps.length}">
             <div class="group-ball background-white"></div>
         </div>
-        <div class="col-md-12" style="margin-left: 20px;">
+        <div class="col-md-12" style="margin-left: 6pt;">
             <div class="text-sub-title text-bold text-primary-color designation">{{workExp.designation}} </div>
             <div class="text-sub-title text-bold company">{{workExp.company}}</div>
-            <div class="text-small text-primary-color text-ittalic">{{workExp.startDate}} - {{workExp.endDate}}</div>
-            <div class="col-md-12 no-col-padding" style="padding-top: 5px;">
-                <span bracket-list [listItems]="workExp.tasks" [isTwoRow]="false"></span>
+            <div class="text-small text-primary-color text-ittalic work-experience-period">{{workExp.startDate}} - {{workExp.endDate}}</div>
+            <div class="col-md-12 no-col-padding" style="padding-top: 5pt;">
+                <span bracket-list [listItems]="workExp.tasks" [isTwoRow]="false" [title]="'Responsibilities'"></span>
             </div>
         </div>
     </div>
