--- a/docs/assets/print/printstyle_page2.css
+++ b/docs/assets/print/printstyle_page2.css
@@ -1,28 +1,42 @@
 /* Main Css*/
+@page  
+{ 
+    size: A4;   /* auto is the initial value */ 
+
+    /* this affects the margin in the printer settings */ 
+    margin-right: 0mm; 
+    margin-top: 10mm;  
+    margin-left: 0mm;  
+} 
+
+
+@media print {
+    #second-page { page-break-after: always; }
+}
 
 .text-title-big{
-    font-size: 34px;
-    line-height: 36px;
+    font-size: 27pt;
+    line-height: 29pt;
 }
 
 .text-title{
-    font-size: 20px;
-    line-height: 22.5px;
+    font-size: 21pt;
+    line-height: 24pt;
 }
 
 .text-sub-title{
-    font-size: 18px;
-    line-height: 20px;
+    font-size: 16pt;
+    line-height: 18pt;
 }
 
 .text-normal{
-    font-size: 13.5px;
-    line-height: 16.5px;
+    font-size: 13pt;
+    line-height: 14pt;
 }
 
 .text-small{
-    font-size: 12px;
-    line-height: 15px;
+    font-size: 11pt;
+    line-height: 12pt;
 }
 
 .text-primary-color{
@@ -46,27 +60,27 @@
 }
 
 .nopadding{
-    padding: 0px;
+    padding: 0pt;
 }
 
 .no-col-padding{
-    padding-right: 0px !important;
-    padding-left: 0px !important;
+    padding-right: 0pt !important;
+    padding-left: 0pt !important;
 }
 
 .title-underline{
-    border-bottom-width: 2px;
+    border-bottom-width: 2pt;
     border-bottom-style: solid;
     border-color: #154677;
 }
 
 .seperator{
     width: 100%;
-    margin-top: 6px;
-    margin-bottom: 6px;
+    margin-top: 6pt;
+    margin-bottom: 6pt;
     border-color: #154677;
     float: left;
-    height: 2px;
+    height: 2pt;
 }
 
 .text-bold{
@@ -78,26 +92,26 @@
 }
 
 .content-heading{
-    margin-bottom: 12px;
-    padding-bottom: 1.5px;
+    margin-bottom: 12pt;
+    padding-bottom: 1.5pt;
     text-transform: uppercase;
     font-weight: 600;
     color: #154677;
 }
 
 .group-line{
-    top: 4.5px;
+    top: 4.5pt;
     position: absolute;
     height: 100%;
-    width: 2px;
+    width: 2pt;
 }
 
 .group-ball{
-    border-width: 4px!important;
-    width: 15px;
-    height: 15px;
-    top: -1px;
-    left: -6.75px;
+    border-width: 4pt!important;
+    width: 15pt;
+    height: 15pt;
+    top: -1pt;
+    left: -6.75pt;
     position: absolute;
     border-radius: 50%;
     border-style: solid;
@@ -118,37 +132,9 @@
 
 
 
-
-
-
-
-
-
-
-
-.left-bar{
-    width: 240px;
-    float: left;
-}
-
-.right-bar{
-    width: 652.5px;
-    padding-right: 25px;
-    float: right;
-}
-
-
-
-
-
-
-
-
-
-
 .top-watermark{
     background-image: url("/TopTriangle.svg");
-    height: 631.5px!important;
+    height: 631.5pt!important;
     top: 0!important;
     background-position: left top !important;
     background-repeat: no-repeat;
@@ -158,9 +144,9 @@
     background-size: cover !important;
 }
 
-.bottom-watermark{ 
+.bottom-watermark{
     background-image: url("/BottomTriangle.svg");
-    height: 631.5px!important;
+    height: 631.5pt!important;
     bottom: 0!important;
     background-position: 100% 100% !important;
     background-repeat: no-repeat;
@@ -170,62 +156,55 @@
     background-size: cover !important;
 }
 
-
 .page-container {
-    width: 892.5px !important;
-    min-height: 1263px !important;
-    padding-bottom: 30px!important;
+    /* width: 892.5pt !important;
+    min-height: 1263pt !important; */
+
+    width: 210mm !important;
+    min-height: 297mm !important;
+    padding-bottom: 30pt!important;
+    margin: 1cm auto; 
     background: #FFFFFF;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 5pt rgba(0, 0, 0, 0.1);
     position: relative;
 }
 
-
 .page-container.page-one{
-    padding-left: 22px;
+    padding-left: 10pt;
 }
 
 .page-container.page-two{
-    padding-top: 30px;
+    padding-top: 30pt;
 }
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
 .top-header{
-    padding-top: 33px;
+    display: table;
+    padding-top: 20pt;
     width: 100%;
-    padding-right: 0px;
-    padding-left: 0px;
-    margin-bottom: 18px;
+    padding-right: 0pt;
+    padding-left: 0pt;
+    margin-bottom: 18pt;
 }
 
 .top-header .col-md-3{
     overflow: auto;
-    display: inline-block;
+    display: table-cell;
+    vertical-align: middle;
+    width: 177pt !important;
 }
 
 .photo{
-    width:408px!important; 
-    height:408px!important; 
-    max-width:180px!important; 
-    max-height:180px!important;
+    width:408pt!important; 
+    height:408pt!important; 
+    max-width: 145pt!important;
+    max-height: 150pt!important;
     border-color: #d3d3d3;
     float: left;
     margin: 0 auto;
     position: relative;
-    border-width: 1px;
+    border-width: 1pt;
     border-style: solid;
     border-radius: 50%;
     background: url("/photo.jpeg") no-repeat;
@@ -234,59 +213,40 @@
 }
 
 .blue-header-content{
-    padding: 13.5px 0 16.5px 0;
+    padding: 13.5pt 0 16.5pt 0;
     height: auto;
-    float: right;
-    position: relative;
+    /* float: right;
+    position: relative; */
     box-sizing: border-box;
+    display: table-cell;
+    width: 75%;
 }
 
 .header-seperator{
-    width: 160.5px;
-    margin-top: 6px;
-    margin-bottom: 6px;
+    width: 140pt;
+    margin-top: 6pt;
+    margin-bottom: 6pt;
     background-color: #FFFFFF;
     float: left;
-    height: 2px;
+    height: 2pt;
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .skill-block-container{
-    margin-bottom: 13.5px;
-    margin-right: 7.5px;
+    margin-bottom: 5pt;
+    margin-right: 6pt;
     width: auto;
     float: left;
 }
 
 .skill-block-text{
-    margin-bottom: 6px;
-    border-radius: 4.5px;
-    padding: 1px 10.5px;
+    margin-bottom: 6pt;
+    border-radius: 4.5pt;
+    padding: 1pt 9pt;
     float: left;
     position: relative;
     display: inline-table;
-    min-height: 25px;
+    min-height: 30pt;
 }
 
 .skill{
@@ -294,31 +254,34 @@
     vertical-align: middle;
 }
 
+.skills-parent{
+    overflow: auto;
+}
 
+.left-bar{
+    width: 26%;
+    float: left;
+}
 
-
+.right-bar{
+    width: 74%;
+    padding-right: 25pt;
+    float: right;
+}
 
 .contact-item{
-    margin-bottom: 12px;
-    padding-top: 18px;
-    min-height: 13.5px;
+    margin-bottom: 12pt;
+    padding-top: 5pt;
+    min-height: 13.5pt;
     display: flex;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
 .bracket-list{
     display: inline-block;
+}
+
+.bracket-list-vertical-top{
+    vertical-align: top;
 }
 
 .bracket-item-container{
@@ -326,26 +289,25 @@
 }
 
 .bracket-list-icon{
-    font-size:8px;
-    font-size: 8px;
+    font-size: 6pt;
     display: table-cell;
     width: 1%;
-    padding-top: 5  px;
+    padding-top: 3pt;
     vertical-align: top;
 }
 
 .bracket-list-item{
     display: table-cell;
     width: 99%;
-    padding-left: 5px;
+    padding-left: 5pt;
 }
 
 .bracket-item-1{
-    top: 1.5px;
-    left: 1.5px;
-    border-top-width: 1.5px;
-    border-left-width: 1.5px;
-    width: 9px;
+    top: 1.5pt;
+    left: 1.5pt;
+    border-top-width: 1.5pt;
+    border-left-width: 1.5pt;
+    width: 9pt;
     height: 80%;
     position: absolute;
     border-top-style: solid;
@@ -354,11 +316,11 @@
 }
 
 .bracket-item-2{
-    top: 1.5px;
-    right: 1.5px;
-    border-top-width: 1.5px;
-    border-right-width: 1.5px;
-    width: 9px;
+    top: 1.5pt;
+    right: 1.5pt;
+    border-top-width: 1.5pt;
+    border-right-width: 1.5pt;
+    width: 9pt;
     height: 80%;
     position: absolute;
     border-top-style: solid;
@@ -367,11 +329,11 @@
 }
 
 .bracket-item-3{
-    bottom: 1.5px;
-    left: 1.5px;
-    border-bottom-width: 1.5px;
-    border-left-width: 1.5px;
-    width: 9px;
+    bottom: 1.5pt;
+    left: 1.5pt;
+    border-bottom-width: 1.5pt;
+    border-left-width: 1.5pt;
+    width: 9pt;
     height: 80%;
     position: absolute;
     border-bottom-style: solid;
@@ -380,11 +342,11 @@
 }
 
 .bracket-item-4{
-    bottom: 1.5px;
-    right: 1.5px;
-    border-bottom-width: 1.5px;
-    border-right-width: 1.5px;
-    width: 9px;
+    bottom: 1.5pt;
+    right: 1.5pt;
+    border-bottom-width: 1.5pt;
+    border-right-width: 1.5pt;
+    width: 9pt;
     height: 80%;
     position: absolute;
     border-bottom-style: solid;
@@ -392,23 +354,30 @@
     border-color: #154677;
 }
 
+.bracket-content{
+    padding: 4pt 0px;
+}
 
 
+.work-experience-item{
+    padding-bottom:15pt;
+    padding-right:0px
+}
 
+.work-experience-period{
+    margin-top: 2pt;
+}
 
+.bracket-list-item{
+    padding-bottom: 3pt;
+}
 
+.display-inline-for-project{
+    display: inline-block;
+    width: 50%;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.bracket-list.col-md-6{
+    display: inline-block;
+    width: 50%;
+}
