--- a/src/app/Components/skills/skills.component.css
+++ b/src/app/Components/skills/skills.component.css
@@ -1,21 +1,25 @@
 .skill-block-container{
-    margin-bottom: 13.5px;
-    margin-right: 7.5px;
+    margin-bottom: 5pt;
+    margin-right: 6pt;
     width: auto;
     float: left;
 }
 
 .skill-block-text{
-    margin-bottom: 6px;
-    border-radius: 4.5px;
-    padding: 1px 10.5px;
+    margin-bottom: 6pt;
+    border-radius: 4.5pt;
+    padding: 1pt 9pt;
     float: left;
     position: relative;
     display: inline-table;
-    min-height: 25px;
+    min-height: 20pt;
 }
 
 .skill{
     display: table-cell;
     vertical-align: middle;
+}
+
+.skills-parent{
+    overflow: auto;
 }
