--- a/src/app/Components/top-header/top-header.component.css
+++ b/src/app/Components/top-header/top-header.component.css
@@ -1,26 +1,29 @@
-.top-header{
-    padding-top: 33px;
+ .top-header{
+    display: table;
+    padding-top: 20pt;
     width: 100%;
-    padding-right: 0px;
-    padding-left: 0px;
-    margin-bottom: 18px;
+    padding-right: 0pt;
+    padding-left: 0pt;
+    margin-bottom: 18pt;
 }
 
 .top-header .col-md-3{
     overflow: auto;
-    display: inline-block;
+    display: table-cell;
+    vertical-align: middle;
+    width: 177pt !important;
 }
 
 .photo{
-    width:408px!important; 
-    height:408px!important; 
-    max-width:180px!important; 
-    max-height:180px!important;
+    width:408pt!important; 
+    height:408pt!important; 
+    max-width: 125pt!important;
+    max-height: 130pt!important;
     border-color: #d3d3d3;
     float: left;
     margin: 0 auto;
     position: relative;
-    border-width: 1px;
+    border-width: 1pt;
     border-style: solid;
     border-radius: 50%;
     background: url("src/assets/photo.jpeg") no-repeat;
@@ -29,7 +32,76 @@
 }
 
 .blue-header-content{
-    padding: 13.5px 0 16.5px 0;
+    padding: 13.5pt 0 16.5pt 0;
+    height: auto;
+    /* float: right;
+    position: relative; */
+    box-sizing: border-box;
+    display: table-cell;
+    width: 73%;
+}
+
+.header-seperator{
+    width: 100pt;
+    margin-top: 6pt;
+    margin-bottom: 6pt;
+    background-color: #FFFFFF;
+    float: left;
+    height: 2pt;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* .top-header{
+    padding-top: 33pt;
+    width: 100%;
+    padding-right: 0pt;
+    padding-left: 0pt;
+    margin-bottom: 18pt;
+}
+
+.top-header .col-md-3{
+    overflow: auto;
+    display: inline-block;
+}
+
+.photo{
+    width:408pt!important; 
+    height:408pt!important; 
+    max-width:180pt!important; 
+    max-height:180pt!important;
+    border-color: #d3d3d3;
+    float: left;
+    margin: 0 auto;
+    position: relative;
+    border-width: 1pt;
+    border-style: solid;
+    border-radius: 50%;
+    background: url("src/assets/photo.jpeg") no-repeat;
+    background-size: 100% 100%;
+    z-index: 10;
+}
+
+.blue-header-content{
+    padding: 13.5pt 0 16.5pt 0;
     height: auto;
     float: right;
     position: relative;
@@ -37,10 +109,11 @@
 }
 
 .header-seperator{
-    width: 202.5px;
-    margin-top: 6px;
-    margin-bottom: 6px;
+    width: 202.5pt;
+    margin-top: 6pt;
+    margin-bottom: 6pt;
     background-color: #FFFFFF;
     float: left;
-    height: 2px;
+    height: 2pt;
 }
+ */
