--- a/src/app/Components/top-header/top-header.component.html
+++ b/src/app/Components/top-header/top-header.component.html
@@ -1,12 +1,12 @@
-<div class="col-md-12 top-header">
-    <div class="col-md-3">
+<div class="col-md-12 col-sm-12 top-header">
+    <div class="col-md-3 col-sm-3">
         <div class="photo"></div>
     </div>
-    <div class="col-md-9 blue-header-content background-primary text-white">
-        <div class="col-md-12 text-title-big">{{headerDetail.name}}</div>
-        <div class="col-md-12 text-sub-title" style="padding-top: 4.5px;">{{headerDetail.title}}</div>
-        <div class="col-md-12" style="overflow: hidden;"><div class="header-seperator"></div></div>
-        <div class="col-md-12 text-normal" style="padding-top: 6px;">
+    <div class="col-md-9 col-sm-9 blue-header-content background-primary text-white">
+        <div class="col-md-12 col-sm-12 text-title-big">{{headerDetail.name}}</div>
+        <div class="col-md-12 col-sm-12 text-sub-title" style="padding-top: 4.5pt;">{{headerDetail.title}}</div>
+        <div class="col-md-12 col-sm-12" style="overflow: hidden;"><div class="header-seperator"></div></div>
+        <div class="col-md-12 col-sm-12 text-normal" style="padding-top: 6pt;">
             {{headerDetail.description}}
         </div>
     </div>
