--- a/src/styles.css
+++ b/src/styles.css
@@ -1,28 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
 
 .text-title-big{
-    font-size: 34px;
-    line-height: 36px;
+    font-size: 22pt;
+    line-height: 24pt;
 }
 
 .text-title{
-    font-size: 20px;
-    line-height: 22.5px;
+    font-size: 16pt;
+    line-height: 19pt;
 }
 
 .text-sub-title{
-    font-size: 18px;
-    line-height: 20px;
+    font-size: 11pt;
+    line-height: 13pt;
 }
 
 .text-normal{
-    font-size: 13.5px;
-    line-height: 16.5px;
+    font-size: 9pt;
+    line-height: 11pt;
 }
 
 .text-small{
-    font-size: 12px;
-    line-height: 15px;
+    font-size: 8pt;
+    line-height: 10pt;
 }
 
 .text-primary-color{
@@ -46,27 +46,27 @@
 }
 
 .nopadding{
-    padding: 0px;
+    padding: 0pt;
 }
 
 .no-col-padding{
-    padding-right: 0px !important;
-    padding-left: 0px !important;
+    padding-right: 0pt !important;
+    padding-left: 0pt !important;
 }
 
 .title-underline{
-    border-bottom-width: 2px;
+    border-bottom-width: 2pt;
     border-bottom-style: solid;
     border-color: #154677;
 }
 
 .seperator{
     width: 100%;
-    margin-top: 6px;
-    margin-bottom: 6px;
+    margin-top: 6pt;
+    margin-bottom: 6pt;
     border-color: #154677;
     float: left;
-    height: 2px;
+    height: 2pt;
 }
 
 .text-bold{
@@ -78,26 +78,26 @@
 }
 
 .content-heading{
-    margin-bottom: 12px;
-    padding-bottom: 1.5px;
+    margin-bottom: 12pt;
+    padding-bottom: 1.5pt;
     text-transform: uppercase;
     font-weight: 600;
     color: #154677;
 }
 
 .group-line{
-    top: 4.5px;
+    top: 4.5pt;
     position: absolute;
     height: 100%;
-    width: 2px;
+    width: 2pt;
 }
 
 .group-ball{
-    border-width: 4px!important;
-    width: 15px;
-    height: 15px;
-    top: -1px;
-    left: -6.75px;
+    border-width: 4pt!important;
+    width: 15pt;
+    height: 15pt;
+    top: -1pt;
+    left: -6.75pt;
     position: absolute;
     border-radius: 50%;
     border-style: solid;
