--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -4554,3 +4554,11 @@ readers do not read off random characters that represent icons */
 .fas {
   font-family: 'Font Awesome 5 Free';
   font-weight: 900; }
+
+
+
+  @media print {
+    p {
+      font-size: 12pt;
+    }
+  }
